底部菜单购物车的互斥，添加Fragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="cn.ucai.fulishop.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:id="@+id/main_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:background="@color/bottom_bar_taobao_bg"
+        android:layout_alignParentBottom="true">
+        <RadioGroup
+            android:id="@+id/rg_bottom_layout"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true">
+            <RadioButton
+                android:id="@+id/rb_NewsGood"
+                style="@style/menu_item_style"
+                android:text="新品"
+                android:textColor="@color/main_botton_text_color"
+                android:drawableTop="@drawable/selector_menu_item_new_good"
+                android:checked="true"
+                android:button="@null"/>
+            <RadioButton
+                android:id="@+id/rb_Boutique"
+                style="@style/menu_item_style"
+                android:text="精品"
+                android:textColor="@color/main_botton_text_color"
+                android:drawableTop="@drawable/selector_menu_item_boutique"
+                android:checked="false"
+                android:button="@null"/>
+            <RadioButton
+                android:id="@+id/rb_Category"
+                style="@style/menu_item_style"
+                android:text="分类"
+                android:textColor="@color/main_botton_text_color"
+                android:drawableTop="@drawable/selector_menu_item_category"
+                android:checked="false"
+                android:button="@null"/>
+            <RelativeLayout
+                style="@style/style_menu_item">
+                <RadioButton
+                    android:id="@+id/rb_Cart"
+                    android:drawableTop="@drawable/selector_menu_item_cart"
+                    style="@style/menu_item_style_cart"
+                    android:text="购物车"
+                    android:textColor="@color/main_botton_text_color"
+                    android:button="@null"
+                    android:checked="false"/>
+                <TextView
+                    android:id="@+id/tv_cart_num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="22"
+                    android:textColor="#fff"
+                    android:background="@drawable/cart_hint"
+                    android:layout_marginTop="2dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="18dp"/>
+            </RelativeLayout>
+            <RadioButton
+                android:id="@+id/rb_Personal"
+                style="@style/menu_item_style"
+                android:text="我的淘宝"
+                android:textColor="@color/main_botton_text_color"
+                android:drawableTop="@drawable/selector_menu_item_personal_center"
+                android:checked="false"
+                android:button="@null"/>
+        </RadioGroup>
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@id/main_bottom"
+        android:background="#0f0"/>
+    <RelativeLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/main_bottom"
+        android:layout_marginBottom="1dp"/>
 </RelativeLayout>
