添加精品首页布局文件和BoutiqueAdapter

--- a/app/src/main/res/layout/fragment_boutique.xml
+++ b/app/src/main/res/layout/fragment_boutique.xml
@@ -1,15 +1,23 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/srl"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="cn.ucai.fulishop.fragment.BoutiqueFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    android:layout_height="match_parent">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="精品"
-        android:gravity="center"
-        android:textSize="50sp"/>
-
-</FrameLayout>
+        android:orientation="vertical">
+    <TextView
+        android:id="@+id/tv_Refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="刷新中..."
+        android:gravity="center_horizontal"
+        android:visibility="gone"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/boutique_Recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
