分类首界面的fragment文件的添加，及Adapter

--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -3,13 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="cn.ucai.fulishop.fragment.CategoryFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ExpandableListView
+        android:id="@+id/Elv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="分类"
-        android:gravity="center"
-        android:textSize="50sp"/>
-
+        android:layout_height="match_parent">
+    </ExpandableListView>
 </FrameLayout>
