--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,7 +32,7 @@
         android:layout_height="60dp"
         android:background="@color/good_detail_bg_white"
         android:layout_marginTop="10dp"
-        android:hint="昵称"
+        android:hint="用户"
         android:drawableRight="@drawable/icon_account"
         />
     <EditText
@@ -41,7 +41,7 @@
         android:layout_height="60dp"
         android:background="@color/good_detail_bg_white"
         android:layout_marginTop="10dp"
-        android:hint="用户名"
+        android:hint="昵称"
         android:drawableRight="@drawable/icon_account"
         />
     <EditText
