--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -48,11 +48,13 @@
         android:layout_height="60dp"
         android:background="@color/orange">
         <LinearLayout
+            android:id="@+id/collect_goods"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/tv_collect_count"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:gravity="center"
