--- a/app/src/main/res/layout/fragment_carts.xml
+++ b/app/src/main/res/layout/fragment_carts.xml
@@ -4,13 +4,36 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="cn.ucai.fulishop.fragment.CartsFragment">
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/srl"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="刷新中..." />
+            <TextView
+                android:id="@+id/tv_nothing"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="购物车空空如也..."
+                android:gravity="center"
+                android:textSize="40sp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/Recycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
     <RelativeLayout
+        android:id="@+id/layout_buy"
         android:layout_width="match_parent"
         android:layout_height="80dp">
         <Button
