--- a/app/src/main/res/layout/activity_goods_details.xml
+++ b/app/src/main/res/layout/activity_goods_details.xml
@@ -31,12 +31,28 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:src="@mipmap/bg_collect_in"/>
-        <ImageView
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/iv_Gd_cart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@mipmap/bg_cart_selected"/>
+            <TextView
+                android:id="@+id/details_cartCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:textColor="#00F"/>
+        </RelativeLayout>
+        <!--<ImageView
             android:id="@+id/iv_Gd_cart"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@mipmap/bg_cart_selected"/>
+            android:src="@mipmap/bg_cart_selected"/>-->
         <ImageView
             android:id="@+id/iv_Gd_share"
             android:layout_width="0dp"
