--- a/app/src/main/res/layout/activity_person.xml
+++ b/app/src/main/res/layout/activity_person.xml
@@ -8,11 +8,12 @@
     tools:context="cn.ucai.fulishop.activity.PersonActivity">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:background="#fff">
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/backClickArea"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/back"
             android:layout_centerVertical="true"/>
         <TextView
@@ -20,7 +21,8 @@
             android:layout_height="match_parent"
             android:text="个人资料"
             android:gravity="center"
-            android:textSize="30sp"/>
+            android:textSize="20sp"
+            android:textColor="#000"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -39,22 +41,23 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/iv_person_avatar"
             android:layout_marginTop="30dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:text="aaa"
             android:textSize="20sp"/>
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/rl_nick"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
         android:background="@color/good_detail_bg_white">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="昵称"
             android:layout_centerVertical="true"
-            android:textSize="20sp"/>
+            android:textSize="15sp"
+            android:textColor="#000"/>
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
@@ -73,19 +76,21 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
         android:background="@color/good_detail_bg_white">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我的二维码"
             android:layout_centerVertical="true"
-            android:textSize="20sp"/>
+            android:textSize="15sp"
+            android:textColor="#000"/>
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
             android:layout_centerVertical="true"
             android:src="@drawable/tb_icon_home_qrcode_gray"/>
     </RelativeLayout>
@@ -94,6 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="退出登录"
+        android:layout_marginTop="10dp"
         android:background="@color/orange"
         android:textSize="20sp"/>
 </LinearLayout>
