--- a/app/src/main/res/layout/activity_boutique_categroy.xml
+++ b/app/src/main/res/layout/activity_boutique_categroy.xml
@@ -8,17 +8,18 @@
         android:layout_height="40dp"
         android:background="@color/main_orange">
         <ImageView
-            android:id="@+id/iv_Boutique_Categroy"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@mipmap/back_nomal"/>
+            android:id="@+id/backClickArea"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@mipmap/back_nomal"
+            android:layout_centerVertical="true"/>
         <TextView
             android:id="@+id/tv_boutique_Categroy_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/iv_Boutique_Categroy"
+            android:layout_toRightOf="@id/backClickArea"
             android:text="商品详情"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:gravity="center_vertical"
             android:textColor="#fff"/>
     </RelativeLayout>
@@ -35,7 +36,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="刷新中..."
-            android:gravity="center_horizontal"
+            android:textColor="#000"
+            android:layout_gravity="center_horizontal"
             android:visibility="gone"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_boutique_categroy"
