--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -8,12 +8,12 @@
     tools:context="cn.ucai.fulishop.activity.CollectActivity">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:background="#fff">
         <ImageView
             android:id="@+id/backClickArea"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/back"
             android:layout_centerVertical="true"/>
         <TextView
@@ -21,7 +21,8 @@
             android:layout_height="match_parent"
             android:text="收藏的宝贝"
             android:gravity="center"
-            android:textSize="30sp"/>
+            android:textSize="20sp"
+            android:textColor="#000"/>
     </RelativeLayout>
     <include layout="@layout/fragment_new_goods"/>
 </LinearLayout>
