--- a/app/src/main/res/layout/activity_goods_details.xml
+++ b/app/src/main/res/layout/activity_goods_details.xml
@@ -20,20 +20,22 @@
             android:src="@mipmap/back_nomal"/>
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="10"
+            android:layout_weight="8"
             android:layout_height="wrap_content"
             android:text="商品详情"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textColor="#fff"/>
         <ImageView
             android:id="@+id/iv_Gd_collect"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginRight="5dp"
             android:layout_height="wrap_content"
             android:src="@mipmap/bg_collect_in"/>
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginRight="5dp"
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/iv_Gd_cart"
@@ -57,6 +59,7 @@
             android:id="@+id/iv_Gd_share"
             android:layout_width="0dp"
             android:layout_weight="1"
+            android:layout_marginRight="5dp"
             android:layout_height="wrap_content"
             android:src="@drawable/selector_share_bg"
             />
