--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,20 +6,22 @@
     <RelativeLayout
         android:id="@+id/layout_login_title"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@color/good_detail_bg_white">
         <ImageView
             android:id="@+id/backClickArea"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/back"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/back"
+            android:layout_centerVertical="true"/>
         <TextView
             android:id="@+id/tv_common_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="账户登录"
             android:gravity="center"
-            android:textSize="30dp"
+            android:textSize="20sp"
+            android:textColor="#000"
             android:layout_toRightOf="@id/backClickArea"
             android:layout_marginRight="50dp"
             />
@@ -28,38 +30,66 @@
         android:id="@+id/et_UserName"
         android:layout_below="@id/layout_login_title"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/good_detail_bg_white"
-        android:layout_margin="10dp"
+        android:layout_marginTop="5dp"
         android:hint="用户名"
         android:drawableRight="@drawable/icon_account"
         />
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/good_detail_bg_white"
         android:layout_below="@id/et_UserName"
-        android:layout_margin="10dp"
+        android:layout_marginTop="5dp"
         android:hint="密码"
+        android:inputType="textPassword"
         android:drawableRight="@drawable/icon_pwd"/>
+    <RelativeLayout
+        android:id="@+id/layout_checkBox"
+        android:layout_below="@id/et_password"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <CheckBox
+        android:id="@+id/check_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="false"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/check_box"
+        android:text="显示密码"
+        android:layout_centerVertical="true" />
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_marginTop="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@id/et_password"
+        android:layout_centerHorizontal="true"
+        android:gravity="center">
     <Button
         android:id="@+id/bt_login"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:background="@color/main_orange"
         android:layout_below="@id/et_password"
-        android:layout_margin="40dp"
         android:text="登录"
-        android:textSize="30sp"
+        android:textSize="20sp"
         />
     <Button
         android:id="@+id/bt_register"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:layout_below="@id/bt_login"
         android:layout_centerHorizontal="true"
         android:background="@color/holo_orange_light"
         android:text="注册"
-        android:textSize="30sp"/>
+        android:layout_marginLeft="50dp"
+        android:textSize="20sp"/>
+    </LinearLayout>
 </RelativeLayout>
