--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,20 +8,22 @@
     <RelativeLayout
         android:id="@+id/layout_login_title"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:background="@color/good_detail_bg_white">
         <ImageView
             android:id="@+id/backClickArea"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/back"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/back"
+            android:layout_centerVertical="true"/>
         <TextView
             android:id="@+id/tv_common_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="账户登录"
             android:gravity="center"
-            android:textSize="30dp"
+            android:textSize="20sp"
+            android:textColor="#000"
             android:layout_toRightOf="@id/backClickArea"
             android:layout_marginRight="50dp"
             />
@@ -29,44 +31,44 @@
     <EditText
         android:id="@+id/et_UserName"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/good_detail_bg_white"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:hint="用户"
         android:drawableRight="@drawable/icon_account"
         />
     <EditText
         android:id="@+id/et_Nick"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/good_detail_bg_white"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:hint="昵称"
         android:drawableRight="@drawable/icon_account"
         />
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/good_detail_bg_white"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:hint="密码"
         android:drawableRight="@drawable/icon_pwd"/>
     <EditText
         android:id="@+id/et_confirm_pass"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@color/good_detail_bg_white"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:hint="确认密码"
         android:drawableRight="@drawable/icon_pwd"/>
     <Button
         android:id="@+id/bt_password"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:background="@color/main_orange"
         android:text="免费注册"
         android:layout_marginTop="20dp"
-        android:textSize="30sp"/>
+        android:textSize="20sp"/>
 </LinearLayout>
