--- a/app/src/main/res/layout/activity_update_nick.xml
+++ b/app/src/main/res/layout/activity_update_nick.xml
@@ -8,11 +8,12 @@
     tools:context="cn.ucai.fulishop.activity.UpdateNickActivity">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:background="#fff">
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:id="@+id/backClickArea"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/back"
             android:layout_centerVertical="true"/>
         <TextView
@@ -20,15 +21,20 @@
             android:layout_height="match_parent"
             android:text="修改昵称"
             android:gravity="center"
-            android:textSize="30sp"/>
+            android:textSize="20sp"
+            android:textColor="#000"/>
     </RelativeLayout>
     <EditText
         android:id="@+id/et_updateNick"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="40dp"
+        android:background="@color/good_detail_bg_white"
+        android:gravity="center_vertical"
+        android:text="15sp"/>
     <Button
         android:id="@+id/bt_updateNick"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/orange"
