--- a/app/src/main/res/layout/fragment_boutique.xml
+++ b/app/src/main/res/layout/fragment_boutique.xml
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="刷新中..."
-        android:gravity="center_horizontal"
+        android:textColor="#000"
+        android:layout_gravity="center_horizontal"
         android:visibility="gone"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/boutique_Recycler"
