--- a/app/src/main/res/layout/fragment_new_goods.xml
+++ b/app/src/main/res/layout/fragment_new_goods.xml
@@ -13,6 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="刷新中..."
+            android:textColor="#000"
             android:layout_gravity="center_horizontal"
             android:visibility="gone"/>
         <android.support.v7.widget.RecyclerView
