--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -6,23 +6,24 @@
     tools:context="cn.ucai.fulishop.fragment.PersonalFragment">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:background="@color/personal_center_top_bg">
         <ImageView
             android:id="@+id/person_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/center_card_coupon1"
-            android:layout_alignParentRight="true"/>
+            android:src="@drawable/tb_icon_more_msg_white_56"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"/>
         <TextView
             android:id="@+id/person_set"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/person_message"
             android:text="设置"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:textColor="#fff"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="20dp"/>
         <ImageView
             android:id="@+id/person_avatar"
             android:layout_width="60dp"
@@ -36,10 +37,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/person_avatar"
-            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
             android:textSize="20sp"
+            android:textColor="#000"
             android:text="111"
             />
     </RelativeLayout>
@@ -59,13 +61,14 @@
                 android:layout_height="30dp"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20sp"/>
+                android:textSize="15sp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="收藏的宝贝"
-                android:textSize="20sp"
+                android:textSize="15sp"
+                android:textColor="#000"
                 />
         </LinearLayout>
         <LinearLayout
@@ -78,13 +81,14 @@
                 android:layout_height="30dp"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20sp"/>
+                android:textSize="15sp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="收藏的店铺"
-                android:textSize="20sp"
+                android:textSize="15sp"
+                android:textColor="#000"
                 />
         </LinearLayout>
         <LinearLayout
@@ -97,13 +101,14 @@
                 android:layout_height="30dp"
                 android:gravity="center"
                 android:text="20"
-                android:textSize="20sp"/>
+                android:textSize="15sp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="我的足迹"
-                android:textSize="20sp" />
+                android:textSize="15sp"
+                android:textColor="#000" />
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -144,26 +149,27 @@
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
         android:background="@color/good_detail_bg_white">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我的卡卷包"
             android:layout_centerVertical="true"
-            android:textSize="20sp"/>
+            android:textSize="18sp"
+            android:textColor="#000"/>
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/right_arrow_icon"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="5dp"
         android:background="@color/good_detail_bg_white">
         <TextView
             android:layout_width="wrap_content"
@@ -173,18 +179,19 @@
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
             android:padding="10dp"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="#000"/>
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/right_arrow_icon"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="5dp"
         android:background="@color/good_detail_bg_white">
         <TextView
             android:layout_width="wrap_content"
@@ -194,10 +201,11 @@
             android:gravity="center_vertical"
             android:padding="10dp"
             android:layout_centerVertical="true"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="#000"/>
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/right_arrow_icon"/>
@@ -212,8 +220,8 @@
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="5dp"
         android:background="@color/good_detail_bg_white">
         <TextView
             android:layout_width="wrap_content"
@@ -223,10 +231,11 @@
             android:gravity="center_vertical"
             android:padding="10dp"
             android:layout_centerVertical="true"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="#000"/>
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:src="@drawable/right_arrow_icon"/>
