--- a/app/src/main/res/layout/item_category_child.xml
+++ b/app/src/main/res/layout/item_category_child.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp"
+    app:cardBackgroundColor="#fee"
+    app:cardCornerRadius="5dp">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:id="@+id/layout_Category_child">
@@ -18,3 +25,4 @@
         android:textSize="20sp"
         android:layout_marginLeft="20dp" />
 </RelativeLayout>
+</android.support.v7.widget.CardView>
