--- a/app/src/main/res/layout/item_category_group.xml
+++ b/app/src/main/res/layout/item_category_group.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="40dp"
     android:background="@color/good_detail_bg_white">
     <ImageView
         android:id="@+id/iv_category_group"
@@ -16,14 +16,16 @@
         android:layout_height="wrap_content"
         android:text="分类"
         android:layout_toRightOf="@id/iv_category_group"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:textColor="#000"
         android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"/>
     <ImageView
         android:id="@+id/iv_expand"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginRight="40dp"
         android:src="@mipmap/expand_on"/>
 </RelativeLayout>
