--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="#fee"
+    app:cardCornerRadius="5dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout
     android:id="@+id/layout_Goods"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -8,15 +14,17 @@
     <ImageView
         android:id="@+id/ivGoodsThumb"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:scaleType="fitXY"
         android:src="@drawable/nopic"/>
     <TextView
+        android:layout_marginTop="5dp"
         android:id="@+id/tvGoosName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="商品名称"
         android:textSize="15sp"
+        android:textColor="#000"
         android:gravity="center" />
     <TextView
         android:id="@+id/tvGoodsPrice"
@@ -27,3 +35,4 @@
         android:gravity="center"
         android:textColor="#f00"/>
 </LinearLayout>
+</android.support.v7.widget.CardView>
